--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ html, body{
     color: white;
     padding: 25px;
     letter-spacing: 0.1rem;
+    height: 2350px;
 }   
 .main-left h1{
     margin: 30% 0 20px 0;
@@ -44,11 +45,14 @@ html, body{
     width: 65%;
     padding: 40px 20px;
     display: flex;
+    height: fit-content;
     justify-content: center;
     align-items: center;
 }
+.main-right h3{
+    margin-top: 45px;
+}
 .content{
-    margin: 70px 0 0 0;
     width: 77%;
     height: 100%;
     border: 2px solid white;
@@ -64,7 +68,7 @@ label{
     margin-top: 15px;
     color: #6a6a6a;
 }
-input{
+input, textarea{
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
@@ -105,4 +109,25 @@ input{
 
 .education-details div {
     margin-bottom: 20px;
+}
+.section{
+    margin-top: 55px;
+}
+
+.submit{
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 7px;
+    margin-top: 50px;
+    font-size: 18px;
+    background-color: rgb(16, 104, 255);
+    color: white;
+    cursor: pointer;
+    font-weight: 900;
+    transition: background-color 0.3s ease;
+}
+.submit:hover{
+    background-color: rgb(0, 79, 214);
+    color: white;
 }
