--- a/style.css
+++ b/style.css
@@ -40,9 +40,12 @@ html, body{
     height: fit-content;
     justify-content: center;
     align-items: center;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.432);
+    z-index: 1;
 }
 .main-left h1{
     margin: 30% 0 20px 0;
+    font-size: 2.5rem;
 }
 .main-left p{
     font-size: 0.8rem;
@@ -114,19 +117,39 @@ input, textarea{
 }
 
 .submit{
-    width: 100%;
+    width: 45%;
     padding: 10px;
     border: 1px solid #ccc;
-    border-radius: 7px;
+    border-radius: 25px ;
     margin-top: 50px;
     font-size: 18px;
     background-color: rgb(16, 104, 255);
     color: white;
     cursor: pointer;
     font-weight: 900;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.5s ease, border-radius 0.7s ease-in-out;
 }
 .submit:hover{
     background-color: rgb(0, 79, 214);
     color: white;
+    border-radius: 2px;
+}
+
+/* Left Container */
+.quotebox {
+    font-family: Arial, Helvetica, sans-serif;
+    position: relative;
+    margin-top: 112px;
+    font-weight: 700;
+    padding: 25px;
+    width: 300px;
+    height: 200px;
+    background-color: rgba(95, 95, 95, 0.2); /* Use 'rgba' for proper transparency */
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.quotebox p{
+    font-size: 1.2rem;
 }
