--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ html, body{
     justify-content: center;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
     margin: 40px 0px 40px 0px;
-    border-radius: 18px;
 }
 .main-left{
     width: auto;
@@ -140,6 +139,7 @@ input, textarea{
     font-family: Arial, Helvetica, sans-serif;
     position: relative;
     margin-top: 112px;
+    margin-bottom: 74px;
     font-weight: 700;
     padding: 25px;
     width: 300px;
